--- a/index.html
+++ b/index.html
@@ -3,29 +3,96 @@
 <head>
 <title>GNOME</title>
 <link rel="stylesheet" href="css/styles.css">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
-<body>
-<header>
-    <div id="name">
-<h1>GNOME</h1>
-<p align="right" style="color:#ffffff;padding-top:80px;">Having trouble viewing it?<b>View it Online.</b></p>
-    </div>
+    <body>
+    <header>
+ <div id="name">
+<h1 style="font-size:70px;">GNOME</h1>
+<p align="right" style="color:#ffffff;padding-top:80px;">Having trouble viewing it?<b>View it Online.</b></p> </div>
 <div id="bar"></div>
-<div id="italic" style="width:450px;"><em>"Simply send beatiful emails to people who matter"</em></div>
-<hr style="width:400px;float:left;">
-<br>
-<p><em>The email marketing app for smart businesses</em></p>
-<hr style="width:400px;float:left;">
-<div id="space"></div>
+<div id="top">
+  <div id="italic" style="width:450px;"><em>"Simply send beautiful emails to people who matter"</em></div>
+  <hr style="width:400px;float:left;">
+  <br>
+  <p><em>The email marketing app for smart businesses</em></p>
+  <hr style="width:400px;float:left;">
+  <div id="space"></div>
+</div>
+    </header>
 <div id="bar"></div>
 
-       <div id="">
+       <div id="blog">
        <h2>Main Blog Post Heading</h2>
        <p style="font-size:30px;">Lorem Ipsum Dolor sit amet consectectur adipiscing elit.Duis quis Lectus at arcu egestus fringilla fermentum egep ipsum.Vestibulum hendrerit dignissim nunc vel volutpat.Nulla fasillisi.</p>
-       <div id="details">
-       <p><a href="#">Details</a></p>
+       <div id="details"><p><a href="#">Details</a></p></div>
        </div>
-       </div>
-</header>
-</body>
+         <div id="space"></div>
+        <div id="bar"></div>
+  <div id="space"></div>
+  
+<div id="table">
+  <table>
+  <tr>
+  <td align="center"><img src="images/logo_editable.png">
+  <h3>Editable</h3>
+  <p>Lorem Ipsum Dolor sit amet adipisce</p>
+  </td>
+  
+ <td align="center"><img src="images/logo_versatile.png">
+ <h3>Versatile</h3>
+ <p>Lorem Ipsum Dolor sit amet adipisce</p>
+  </td>
+  <td align="center"><img src="images/logo_pro.png">
+  <h3>Professional</h3>
+ <p>Lorem Ipsum Dolor sit amet adipisce</p>
+ </td>
+  </tr>
+  </table>
+</div>
+<div id="space"></div>
+        <div id="bar"></div>
+  <div id="space"></div>
+  
+ <div>
+ <table>
+ <tr>
+ <td width="50%"><h3 align="center" style="font-size:25px;">Title goes here</h3>
+     <p style="font-size:20px;">Lorem Ipsum Dolor sit amet it sole consectectur adipiscing elit.Duis quis lectus at arcu egestas fringa fermentum eget</p>
+     </td>
+ <td>
+ <img src="images/img1.jpg" style=" width:70%;height:400px;">
+ </td>
+ </table>
+ </div>
+ <div id="bar"></div>
+ 
+ <div>
+     <table>
+     <tr>
+     <td>
+     <img src="images/img2.jpg" style=" width:70%;height:400px;">
+     </td>
+     <td width="50%"><h3 align="center" style="font-size:25px;">Title goes here</h3>
+     <p style="font-size:20px;">Lorem Ipsum Dolor sit amet it sole consectectur adipiscing elit.Duis quis lectus at arcu egestas fringa fermentum eget</p>
+     </td>
+     </table>
+   </div>
+   <div id="bar2"></div>
+   <div id="bar3">
+   <p align="center" style="padding:100px; font-size:40px;color:#ffffff;"> Ad space</br>600 x 120 px</p>
+   </div>
+   <div id="bar2"></div>
+   <div id="space"></div>
+   <div id="after">
+   <h3>Title goes here</h3>
+   <p>Lorem Ipsum Dolor sit amet alia nulla simul has ne,sit nusquam placerat ne.In mei delicata aliquando,purto vocent nusquam no vis,ne nec tincidunt dispuntando.Pro feugiat quaerendum in.</p>
+   </div>
+   <div id="space"></div>
+   <div id="bar2"></div>
+   <div id="bar4">
+   <h5 align="center" style="padding:100px; font-size:20px;">COPYRIGHT 2015-BUILT WITH A GNOMER</br>View online|Unsubscribe</h5>
+   </div>
+   <div id="end"></div>
+    </body>
 </html> 
